<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.imprex</groupId>
	<artifactId>orebfuscator</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>

	<name>Orebfuscator</name>
	<url>https://github.com/Imprex-Development/Orebfuscator</url>
	<description>High-Performance Anti X-Ray</description>
	<inceptionYear>2020</inceptionYear>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/Imprex-Development/Orebfuscator/issues</url>
	</issueManagement>

	<properties>
		<revision>5.0.0-b0</revision>

		<dependency.bukkit.version>1.13-R0.1-SNAPSHOT</dependency.bukkit.version>
		<dependency.bstats.version>3.0.2</dependency.bstats.version>
		<dependency.junit.version>5.10.0</dependency.junit.version>
		<dependency.netty.version>4.1.68.Final</dependency.netty.version>
		<dependency.protocollib.version>5.0.0</dependency.protocollib.version>
		<dependency.joml.version>1.10.5</dependency.joml.version>

		<plugin.compile.version>3.11.0</plugin.compile.version>
		<plugin.shade.version>3.5.0</plugin.shade.version>
		<plugin.sunfire.version>3.1.2</plugin.sunfire.version>
		<plugin.flatten.version>1.5.0</plugin.flatten.version>
		<plugin.specialsource.version>1.2.5</plugin.specialsource.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/repository/public/</url>
		</repository>
	</repositories>

	<modules>
		<module>orebfuscator-plugin</module>
		<module>orebfuscator-nms</module>
		<module>orebfuscator-common</module>
		<module>orebfuscator-api</module>
		<module>orebfuscator-api-example</module>
	</modules>

	<profiles>
		<profile>
			<id>codemc</id>

			<repositories>
				<repository>
					<id>nms-repo</id>
					<url>https://repo.codemc.io/repository/nms/</url>
				</repository>
			</repositories>

			<distributionManagement>
				<repository>
					<id>codemc-releases</id>
					<url>https://repo.codemc.io/repository/maven-releases/</url>
				</repository>
				<snapshotRepository>
					<id>codemc-snapshots</id>
					<url>https://repo.codemc.io/repository/maven-snapshots/</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
	</profiles>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>${plugin.shade.version}</version>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>shade</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<filters>
							<filter>
								<artifact>*:*</artifact>
								<excludes>
									<exclude>META-INF/*.SF</exclude>
									<exclude>META-INF/*.DSA</exclude>
									<exclude>META-INF/*.RSA</exclude>
								</excludes>
							</filter>
						</filters>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${plugin.sunfire.version}</version>
				<configuration>
                    <junitArtifactName>org.junit.jupiter:junit-jupiter</junitArtifactName>
                    <trimStackTrace>false</trimStackTrace>
                </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${plugin.compile.version}</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>${plugin.flatten.version}</version>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>package</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>clean</flattenMode>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
